# Watermarker

./: .gitattributes  .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml  winget.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  compositor.rs  decode.rs  export.rs  lib.rs  main.rs  metadata.rs  placement.rs  preview.rs  settings.rs  state.rs  vrchat.rs  watermark.rs
src/lib/: dnd.ts  ipc.ts  placement.ts  placementMap.test.ts  placementMap.ts  types.ts  updater.test.ts  updater.ts
src/lib/components/: AnchorGrid.svelte  Controls.svelte  DropOverlay.svelte  DropZone.svelte  OutputPanel.svelte  Presets.svelte  PreviewCanvas.svelte  QueuePane.svelte  ReviewGrid.svelte  RotationControl.svelte  UpdateDialog.svelte  VrcMetadataPanel.svelte  WatermarkPanel.svelte
src/lib/components/ui/: Badge.svelte  Button.svelte  Checkbox.svelte  Slider.svelte
src/lib/services/: dnd.svelte.ts
src/lib/state/: output.svelte.ts  persistence.svelte.ts  placement.svelte.ts  presets.svelte.ts  queue.svelte.ts  status.svelte.ts  updater.svelte.ts  watermark.svelte.ts  workspace.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  Header.svelte  Sidebar.svelte
